k8s/auths.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auths-service
  namespace: tiktok
  labels:
    app: auths-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auths-service
  template:
    metadata:
      name: auths-service
      labels:
        app: auths-service
        version: "BUILD_HASH"
    spec:
      containers:
        - name: auths-service
          image: swr.cn-south-1.myhuaweicloud.com/lzb/min-tiktok:test
          imagePullPolicy: Always
          command:
            - ./services/AuthsService
          ports:
            - name: service-10000
              containerPort: 10000
              protocol: TCP
          volumeMounts:
            - name: project-etc-volume
              mountPath: /project/etc
            - name: project-logs-volume
              mountPath: /project/logs
          
      imagePullSecrets:
        - name: harborsecret
      volumes:
        - name: project-etc-volume
          hostPath:
            path: /data/etc
            type: DirectoryOrCreate
        - name: project-logs-volume
          hostPath:
            path: /data/logs

      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auths-api
  namespace: tiktok
  labels:
    app: auths-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auths-api
  template:
    metadata:
      name: auths-api
      labels:
        app: auths-api
        version: "BUILD_HASH"
    spec:
      imagePullSecrets:
        - name: harborsecret
      containers:
        - name: auths-api
          image: swr.cn-south-1.myhuaweicloud.com/lzb/min-tiktok:test
          imagePullPolicy: Always
          command:
            - ./apis/AuthsApi
          ports:
            - containerPort: 8888
              protocol: TCP
          volumeMounts:
            - name: project-etc-volume
              mountPath: /project/etc
            - name: project-logs-volume
              mountPath: /project/logs
      volumes:
        - name: project-etc-volume
          hostPath:
            path: /data/etc
            type: DirectoryOrCreate
        - name: project-logs-volume
          hostPath:
            path: /data/logs
            type: DirectoryOrCreate
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: auths-api
  namespace: tiktok
spec:
  selector:
    app: auths-api

  ports:
    - port: 8888
      targetPort: 8888
