k8s/comment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service
  namespace: tiktok
  labels:
    app: comment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      name: comment-service
      labels:
        app: comment-service
    spec:
      containers:
        - name: comment-service
          image: min-tiktok
          imagePullPolicy: Never
          command:
            - ./services/CommentService
          ports:
            - containerPort: 10005
              protocol: TCP
          volumeMounts:
            - name: project-etc-volume
              mountPath: /project/etc
            - name: project-logs-volume
              mountPath: /project/logs
      volumes:
        - name: project-etc-volume
          hostPath:
            path: /data/etc
#            不存在就创建
            type: DirectoryOrCreate
        - name: project-logs-volume
          hostPath:
            path: /data/logs
            type: DirectoryOrCreate
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
  namespace: tiktok
spec:
  selector:
    app: comment-service
  ports:
    - name: service-10005
      port: 10005
      targetPort: 10005
      protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-api
  namespace: tiktok
  labels:
    app: comment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-api
  template:
    metadata:
      name: comment-api
      labels:
        app: comment-api
    spec:
      containers:
        - name: comment-api
          image: min-tiktok
          imagePullPolicy: Never
          command:
            - ./apis/CommentApi
          ports:
            - containerPort: 8893
              protocol: TCP
          volumeMounts:
            - name: project-etc-volume
              mountPath: /project/etc
            - name: project-logs-volume
              mountPath: /project/logs
      volumes:
        - name: project-etc-volume
          hostPath:
            path: /data/etc
            type: DirectoryOrCreate
        - name: project-logs-volume
          hostPath:
            path: /data/logs
            type: DirectoryOrCreate
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: comment-api
  namespace: tiktok
spec:
  selector:
    app: comment-api
  ports:
    - name: api-8893
      port: 8893
      targetPort: 8893
      protocol: TCP
  type: ClusterIP
