k8s/nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: tiktok
  name: nginx-svc # service 名称
  labels:
    app: nginx #Services 自身的标签，其他pod可以根据这个找到services
spec:
  selector: # 匹配哪些 pod 会被该 services 代理
    app: nginx-svc
  ports: # 端口映射
    - port: 80 # services 自己的端口，在使用内网ip访问时使用
      targetPort: 80  # 目标pod 的端口
      name: web # 为端口起个名字，可以通过名称快速访问到
      protocol: TCP
  type: NodePort
