k8s/publish.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publish-service
  namespace: tiktok
  labels:
    app: publish-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: publish-service
  template:
    metadata:
      name: publish-service
      labels:
        app: publish-service
    spec:
      
      containers:
        - name: publish-service
          image: min-tiktok
          imagePullPolicy: Never
          command:
            - ./services/PublishService
          ports:
            - containerPort: 10003
              protocol: TCP
          volumeMounts:
            - name: project-etc-volume
              mountPath: /project/etc
            - name: project-logs-volume
              mountPath: /project/logs
      volumes:
        - name: project-etc-volume
          hostPath:
            path: /data/etc
            type: DirectoryOrCreate
        - name: project-logs-volume
          hostPath:
            path: /data/logs
            type: DirectoryOrCreate
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: publish-service
  namespace: tiktok
spec:
  selector:
    app: publish-service
  ports:
    - name: service-10003
      port: 10003
      targetPort: 10003
      protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publish-api
  namespace: tiktok
  labels:
    app: publish-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: publish-api
  template:
    metadata:
      name: publish-api
      labels:
        app: publish-api
    spec:
      containers:
        - name: publish-api
          image: min-tiktok
          imagePullPolicy: Never
          command:
            - ./apis/PublishApi
          ports:
            - containerPort: 8891
              protocol: TCP
          volumeMounts:
            - name: project-etc-volume
              mountPath: /project/etc
            - name: project-logs-volume
              mountPath: /project/logs
      volumes:
        - name: project-etc-volume
          hostPath:
            path: /data/etc
            type: DirectoryOrCreate
        - name: project-logs-volume
          hostPath:
            path: /data/logs
            type: DirectoryOrCreate
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: publish-api
  namespace: tiktok
spec:
  selector:
    app: publish-api
  ports:
    - name: api-8891
      port: 8891
      targetPort: 8891
      protocol: TCP
  type: ClusterIP
