k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiktok
  namespace: tiktok
spec:
  selector:
    app: tiktok
  ports:
    - name: api-8890
      port: 8890
      targetPort: 8890
      protocol: TCP

  type: ClusterIP
