k8s/user.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: tiktok
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      name: user-service
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: min-tiktok
          imagePullPolicy: Never
          command:
            - ./services/UserService
          ports:
            - containerPort: 10001
              protocol: TCP
          volumeMounts:
            - name: project-etc-volume
              mountPath: /project/etc
            - name: project-logs-volume
              mountPath: /project/logs
      volumes:
        - name: project-etc-volume
          hostPath:
            path: /data/etc
            type: DirectoryOrCreate
        - name: project-logs-volume
          hostPath:
            path: /data/logs
            type: DirectoryOrCreate
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: tiktok
spec:
  selector:
    app: user-service
  ports:
    -
      port: 10001
      targetPort: 10001
      protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
  namespace: tiktok
  labels:
    app: user-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      name: user-api
      labels:
        app: user-api
    spec:
      containers:
        - name: user-api
          image: min-tiktok
          imagePullPolicy: Never
          command:
            - ./apis/UserApi
          ports:
            - containerPort: 8889
              protocol: TCP
          volumeMounts:
            - name: project-etc-volume
              mountPath: /project/etc
            - name: project-logs-volume
              mountPath: /project/logs

      volumes:
        - name: project-etc-volume
          hostPath:
            path: /data/etc
            type: DirectoryOrCreate
        - name: project-logs-volume
          hostPath:
            path: /data/logs
            type: DirectoryOrCreate
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: user-api
  namespace: tiktok
spec:
  selector:
    app: user-api
  ports:
    - name: api-8889
      port: 8889
      targetPort: 8889
      protocol: TCP
  type: ClusterIP
